--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -14,6 +14,11 @@
 @import './components/frontend/checkout';
 @import './components/frontend/orders';
 @import './components/frontend/gotop';
+@import './components/frontend/favorite';
+@import './components/frontend/discount';
+@import './components/frontend/swiper';
+@import './components/frontend/imagepage';
+@import './components/frontend/newthisweek';
 
 body {
   font-family: helveticaneuebold;
