--- a/src/assets/scss/components/frontend/_index.scss
+++ b/src/assets/scss/components/frontend/_index.scss
@@ -1,4 +1,7 @@
 .wrapper {
+  max-width: 1920px;
+  width: 100%;
+  margin: 0 auto;
   .container-fluid-custom {
     padding-right: 0px;
     padding-left: 0px;
