--- a/src/assets/scss/components/frontend/_navbar.scss
+++ b/src/assets/scss/components/frontend/_navbar.scss
@@ -71,6 +71,7 @@
       color: $primary;
       &::before {
         left: -75px;
+        opacity: 1;
         @include media-breakpoint-down(md) {
           left: -50px;
         }
@@ -93,6 +94,7 @@
       color: $primary;
       &::before {
         left: -75px;
+        opacity: 1;
         @include media-breakpoint-down(md) {
           left: -50px;
         }
@@ -111,6 +113,7 @@
     top: 50%;
     left: -150px;
     transition: 0.5s;
+    opacity: 0;
   }
   .cart-fav li.active {
     a {
@@ -118,20 +121,24 @@
     }
   }
 
-  .header-btn {
-    min-width: 160px;
-    height: 55px;
-    color: #fff;
-    background-color: #000;
-    padding: 0 5px;
-    line-height: 55px;
-    border-radius: 0;
-    font-size: 18px;
-    &.active {
+  .header-btn-group {
+    a {
+      min-width: 160px;
+      height: 55px;
+      color: #fff;
       background-color: $primary;
-    }
-    &:hover {
-      background-color: #000;
+      padding: 0 5px;
+      line-height: 55px;
+      border-radius: 0;
+      font-size: 18px;
+      transition: 0.5s;
+
+      &:hover {
+        background-color: #000;
+      }
+      &.active {
+        background-color: #000;
+      }
     }
   }
   .cart-fav-search {
@@ -171,11 +178,6 @@
       background-image: url('~@/assets/images/core-img/favorites.png');
       width: 21px;
       height: 21px;
-    }
-    .search-img {
-      background-image: url('~@/assets/images/core-img/search.png');
-      width: 20px;
-      height: 20px;
     }
   }
   .social-info {
