--- a/src/assets/scss/components/frontend/_products.scss
+++ b/src/assets/scss/components/frontend/_products.scss
@@ -1,88 +1,154 @@
 .shop-products-area {
+  .search-area {
+    .search-img {
+      background-image: url('~@/assets/images/core-img/search.png');
+      width: 20px;
+      height: 20px;
+    }
+
+    .form-control {
+      border: none;
+      border-bottom: 2px solid #f5f7fa;
+      border-radius: 0;
+      &:focus {
+        box-shadow: none;
+      }
+    }
+    .btn {
+      outline: none;
+      &:focus {
+        box-shadow: none;
+      }
+    }
+  }
+  .no-results-area {
+    width: 100%;
+    @media (max-width: 1919px) {
+      width: 1000px;
+    }
+    @media (max-width: 1720px) {
+      width: 900px;
+    }
+    @media (max-width: 1680px) {
+      width: 800px;
+    }
+    @media (max-width: 1024px) {
+      width: 420px;
+    }
+    @media (max-width: 768px) {
+      width: 278px;
+    }
+    @media (max-width: 576px) {
+      width: 325px;
+    }
+    @media (max-width: 414px) {
+      width: 364px;
+    }
+    height: 200px;
+    background-color: #f5f7fa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p {
+      font-size: 22px;
+    }
+  }
+
   padding: 100px 10px;
   @media (min-width: 1550px) {
     padding-left: 40px;
     padding-right: 40px;
   }
 
-  .px-custom {
+  .shop-products {
     @media (min-width: 1550px) {
       padding-left: 40px;
       padding-right: 40px;
     }
-  }
-  .card {
-    border: none;
-    a {
-      position: relative;
-
-      &:hover {
-        .btn-bg {
-          transform: scaleX(1);
-          opacity: 1;
-        }
-      }
-      .btn-bg {
+    &:nth-child(even) > .card > a {
+      .new-icon {
+        background-image: url('~@/assets/images/custom-img/new-icon.png');
+        width: 48px;
+        height: 48px;
         position: absolute;
-        background-color: rgba(0, 0, 0, 0.4);
-        text-align: center;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        line-height: 30;
-        transform: scaleX(-1);
-        opacity: 0;
-        transition: 0.5s;
+        top: -15px;
+        right: -15px;
+        transform: rotate(15deg);
       }
     }
+    .card {
+      border: none;
+      a {
+        position: relative;
 
-    .card-body {
-      margin-top: 25px;
-      padding: 0;
-
-      .title {
-        a {
-          text-decoration: none;
+        &:hover {
+          .btn-bg {
+            transform: scaleX(1);
+            opacity: 1;
+          }
+        }
+        .btn-bg {
+          position: absolute;
+          background-color: rgba(0, 0, 0, 0.4);
+          text-align: center;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          line-height: 30;
+          transform: scaleX(-1);
+          opacity: 0;
+          transition: 0.5s;
         }
       }
 
-      .shopcart {
-        a {
-          color: #242424;
-          text-decoration: none;
+      .card-body {
+        margin-top: 25px;
+        padding: 0;
+
+        .title {
+          a {
+            text-decoration: none;
+          }
+        }
+
+        .shopcart {
+          a {
+            color: #242424;
+            text-decoration: none;
+          }
         }
       }
-    }
 
-    .line {
-      widows: 80px;
-      height: 3px;
-      background-color: $primary;
-      margin-bottom: 10px;
-    }
-
-    .price {
-      font-size: 24px;
-      line-height: 1;
-      margin-bottom: 10px;
-      margin-top: 5px;
-      color: $primary;
-    }
-
-    .star {
-      color: $primary;
-      margin: 10px 0;
-      i {
-        font-size: 10px;
+      .line {
+        width: 80px;
+        height: 3px;
+        background-color: $primary;
+        margin-bottom: 10px;
       }
-    }
 
-    .cart-icon {
-      display: inline-block;
-      background-image: url("~@/assets/images/core-img/cart.png");
-      width: 21px;
-      height: 19px;
+      .price {
+        font-size: 24px;
+        line-height: 1;
+        margin-bottom: 10px;
+        margin-top: 5px;
+        color: $primary;
+      }
+
+      .star {
+        color: $primary;
+        margin: 10px 0;
+        i {
+          font-size: 10px;
+        }
+      }
+
+      .cart-icon {
+        display: inline-block;
+        background-image: url('~@/assets/images/core-img/cart.png');
+        width: 21px;
+        height: 19px;
+      }
     }
   }
 }
@@ -130,62 +196,5 @@
 
   h6 {
     margin-bottom: 30px;
-  }
-
-  .shop-brands {
-    margin-bottom: 50px;
-  }
-
-  .form-check {
-    margin-bottom: 25px;
-
-    label {
-      color: #959595;
-      transition: 0.5s;
-      cursor: pointer;
-
-      &:hover {
-        color: $primary;
-      }
-    }
-  }
-
-  .shop-color {
-    li {
-      width: 25%;
-      margin-bottom: 15px;
-      a {
-        display: block;
-        text-decoration: none;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
-        &.white {
-          background-color: #fff;
-        }
-        &.dark-gray {
-          background-color: #969696;
-        }
-        &.black {
-          background-color: #000;
-        }
-        &.blue {
-          background-color: #0315ff;
-        }
-        &.red {
-          background-color: #dc0647;
-        }
-        &.yellow {
-          background-color: #fff56a;
-        }
-        &.dark-orange {
-          background-color: #f26151;
-        }
-        &.brown {
-          background-color: #9a8777;
-        }
-      }
-    }
   }
 }
