--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -19,38 +19,4 @@
 @import './components/frontend/swiper';
 @import './components/frontend/imagepage';
 @import './components/frontend/newthisweek';
-
-body {
-  font-family: helveticaneuebold;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  line-height: 1.3;
-  font-weight: 400;
-}
-
-p {
-  font-weight: 400;
-  line-height: 1.9;
-}
-img {
-  vertical-align: middle;
-}
-
-.bg-cover {
-  background-size: cover;
-  background-position: center center;
-}
-
-.py-150 {
-  padding-top: 150px;
-  padding-bottom: 150px;
-}
+@import './components/frontend/utilities';
