--- a/src/assets/scss/components/frontend/_coupon.scss
+++ b/src/assets/scss/components/frontend/_coupon.scss
@@ -1,4 +1,4 @@
-.discount-area {
+.coupon-area {
   .fa-angle-double-right {
     position: relative;
     animation-name: MoveRight;
@@ -8,7 +8,7 @@
     animation-iteration-count: infinite;
     animation-play-state: running;
   }
-  .discount-icon {
+  .coupon-icon {
     background-image: url('~@/assets/images/custom-img/10-icon.png');
     width: 48px;
     height: 48px;
