--- a/src/assets/scss/components/frontend/_productdetail.scss
+++ b/src/assets/scss/components/frontend/_productdetail.scss
@@ -118,5 +118,13 @@
         color: $primary;
       }
     }
+    .add-btn {
+      border: #fff;
+      transition: 0.3s;
+    }
+    .add-btn:hover {
+      color: #fff;
+      background-color: #000;
+    }
   }
 }
