--- a/src/assets/scss/components/frontend/_checkout.scss
+++ b/src/assets/scss/components/frontend/_checkout.scss
@@ -16,14 +16,9 @@ form {
   }
 }
 
-.modal {
-  .modal-header {
-    border-bottom: none;
-  }
-  .modal-body {
-    font-size: 20px;
-  }
-  .modal-footer {
-    border-top: none;
+.checkout-custom {
+  p {
+    margin-bottom: 0;
+    font-size: 22px;
   }
 }
