--- a/src/assets/scss/components/frontend/_imagepage.scss
+++ b/src/assets/scss/components/frontend/_imagepage.scss
@@ -1,3 +1,86 @@
+.imagepage-area-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 75px;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 2;
+  p {
+    margin-bottom: 0;
+    text-align: center;
+    line-height: 75px;
+    font-size: 28px;
+    color: #fff;
+    transition: 0.3s;
+    @include media-breakpoint-down(md) {
+      font-size: 22px;
+    }
+
+    i {
+      margin-right: 8px;
+    }
+  }
+  a {
+    display: block;
+    text-decoration: none;
+    border: none;
+    position: relative;
+    transition: 0.5s;
+    &::before {
+      content: '';
+      background-color: #343a40;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 100%;
+      z-index: -1;
+      border-radius: 0.3rem;
+      transition: 0.3s ease-out;
+    }
+  }
+  a:hover {
+    color: #fff;
+    background-color: transparent;
+    &::before {
+      width: 100%;
+    }
+  }
+}
+.imagepage-cart-icon {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 10px 20px;
+  text-align: center;
+  transition: 0.3s;
+  &:hover {
+    background-color: $primary;
+    i,
+    p {
+      color: #000;
+    }
+  }
+  a {
+    display: block;
+    text-decoration: none;
+    i {
+      color: #fff;
+      transition: 0.3s;
+    }
+    p {
+      margin-bottom: 0;
+      margin-top: 10px;
+      color: #fff;
+      line-height: 1.3;
+      letter-spacing: 1px;
+      transition: 0.3s;
+    }
+  }
+}
 .imagepage-content {
   background-color: rgba(0, 0, 0, 0.6);
   width: auto;
@@ -8,11 +91,6 @@
   align-items: center;
   justify-content: center;
 
-  .imagepage-content-logo {
-    background-image: url('~@/assets/images/core-img/logo2.png');
-    width: 137px;
-    height: 55px;
-  }
   .imagepage-content-text {
     text-align: center;
     p {
@@ -199,7 +277,6 @@
       top: 0;
       left: 0;
       background-color: $primary;
-      opacity: 0.9;
       border-radius: 0.3rem;
       width: 0;
       height: 100%;
@@ -209,7 +286,6 @@
     a:hover {
       background-color: transparent;
       color: #000;
-      z-index: 1;
       &::after {
         width: 100%;
       }
