--- a/src/assets/scss/components/frontend/_cartcheckout.scss
+++ b/src/assets/scss/components/frontend/_cartcheckout.scss
@@ -7,19 +7,19 @@
       width: 100%;
       height: 40px;
       background-color: #f5f7fa;
-      th {
-        &:nth-child(2) {
-          width: 35%;
-          max-width: 35%;
-        }
-        width: 20%;
-        max-width: 20%;
-        border: none;
-        font-size: 12px;
-        &:last-child {
-          width: 15%;
-          max-width: 15%;
-        }
+    }
+    th {
+      &:nth-child(2) {
+        width: 35%;
+        max-width: 35%;
+      }
+      width: 20%;
+      max-width: 20%;
+      border: none;
+      font-size: 12px;
+      &:last-child {
+        width: 15%;
+        max-width: 15%;
       }
     }
   }
@@ -30,47 +30,42 @@
       display: flex;
       width: 100%;
       align-items: center;
-      td {
-        white-space: nowrap;
-        &:nth-child(2) {
-          width: 35%;
-          max-width: 35%;
-          a {
-            text-decoration: none;
-            color: #000;
-            transition: 0.3s;
-          }
-          a:hover {
-            color: $primary;
-          }
+    }
+    td {
+      display: flex;
+      width: 20%;
+      max-width: 20%;
+      border: none;
+      white-space: nowrap;
+      &:last-child {
+        width: 15%;
+        max-width: 15%;
+        line-height: 2;
+      }
+      @include media-breakpoint-down(lg) {
+        padding: 0.45rem;
+      }
+      &:nth-child(2) {
+        width: 35%;
+        max-width: 35%;
+        a {
+          text-decoration: none;
+          color: #000;
+          transition: 0.3s;
         }
-        .cart-quantity {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-color: #f5f7fa;
-          color: #6d6d6d;
+        a:hover {
+          color: $primary;
         }
-        display: flex;
-        width: 20%;
-        max-width: 20%;
-        border: none;
-        &:last-child {
-          width: 15%;
-          max-width: 15%;
-          line-height: 2;
-        }
-        @include media-breakpoint-down(sm) {
-          font-size: 12px;
-        }
+      }
+      @include media-breakpoint-down(sm) {
+        font-size: 12px;
       }
     }
-    .bg-color {
+    .cart-quantity {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       background-color: #f5f7fa;
-      padding: 2px 5px;
-      @include media-breakpoint-down(sm) {
-        padding: 0 2px;
-      }
     }
   }
 }
