--- a/src/assets/scss/components/frontend/_imagepage.scss
+++ b/src/assets/scss/components/frontend/_imagepage.scss
@@ -1,86 +1,28 @@
-.imagepage-area-nav {
+.navbar {
   position: absolute;
+  width: 100%;
+  height: auto;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 75px;
-  background-color: rgba(0, 0, 0, 0.4);
   z-index: 2;
-  p {
-    margin-bottom: 0;
-    text-align: center;
-    line-height: 75px;
-    font-size: 28px;
-    color: #fff;
-    transition: 0.3s;
-    @include media-breakpoint-down(md) {
-      font-size: 22px;
-    }
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.navbar-dark .navbar-toggler {
+  border-color: rgba(255, 255, 255, 0.5);
+}
 
-    i {
-      margin-right: 8px;
-    }
-  }
-  a {
-    display: block;
-    text-decoration: none;
-    border: none;
-    position: relative;
-    transition: 0.5s;
-    &::before {
-      content: '';
-      background-color: #343a40;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 0;
-      height: 100%;
-      z-index: -1;
-      border-radius: 0.3rem;
-      transition: 0.3s ease-out;
-    }
-  }
-  a:hover {
-    color: #fff;
-    background-color: transparent;
-    &::before {
-      width: 100%;
-    }
-  }
-}
-.imagepage-cart-icon {
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 2;
-  background-color: rgba(0, 0, 0, 0.6);
-  padding: 10px 20px;
-  text-align: center;
-  transition: 0.3s;
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: #fff;
+  transition: 0.5s;
+  letter-spacing: 1px;
+
   &:hover {
-    background-color: $primary;
-    i,
-    p {
-      color: #000;
-    }
-  }
-  a {
-    display: block;
-    text-decoration: none;
-    i {
-      color: #fff;
-      transition: 0.3s;
-    }
-    p {
-      margin-bottom: 0;
-      margin-top: 10px;
-      color: #fff;
-      line-height: 1.3;
-      letter-spacing: 1px;
-      transition: 0.3s;
-    }
+    color: $primary;
   }
 }
+
 .imagepage-content {
   background-color: rgba(0, 0, 0, 0.6);
   width: auto;
