--- a/src/assets/scss/components/frontend/_products.scss
+++ b/src/assets/scss/components/frontend/_products.scss
@@ -1,26 +1,33 @@
-.shop-products-area {
-  .search-area {
-    .search-img {
-      background-image: url('~@/assets/images/core-img/search.png');
-      width: 20px;
-      height: 20px;
-    }
+.search-area {
+  .search-img {
+    background-image: url('~@/assets/images/core-img/search.png');
+    width: 20px;
+    height: 20px;
+  }
 
-    .form-control {
-      border: none;
-      border-bottom: 2px solid #f5f7fa;
-      border-radius: 0;
-      &:focus {
-        box-shadow: none;
-      }
-    }
-    .btn {
-      outline: none;
-      &:focus {
-        box-shadow: none;
-      }
+  .form-control {
+    border: none;
+    border-bottom: 2px solid #f5f7fa;
+    border-radius: 0;
+    &:focus {
+      box-shadow: none;
     }
   }
+  .btn {
+    outline: none;
+  }
+  .btn:focus {
+    box-shadow: none;
+  }
+}
+
+.shop-products-area {
+  padding: 100px 10px;
+  @media (min-width: 1550px) {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
   .no-results-area {
     width: 100%;
     @media (max-width: 1919px) {
@@ -53,103 +60,89 @@
       font-size: 22px;
     }
   }
+}
 
-  padding: 100px 10px;
+.shop-products {
   @media (min-width: 1550px) {
     padding-left: 40px;
     padding-right: 40px;
   }
-
-  .shop-products {
-    @media (min-width: 1550px) {
-      padding-left: 40px;
-      padding-right: 40px;
+  &:nth-child(even) > .card > a {
+    .new-icon {
+      background-image: url('~@/assets/images/custom-img/new-icon.png');
+      width: 48px;
+      height: 48px;
+      position: absolute;
+      top: -15px;
+      right: -15px;
+      transform: rotate(15deg);
     }
-    &:nth-child(even) > .card > a {
-      .new-icon {
-        background-image: url('~@/assets/images/custom-img/new-icon.png');
-        width: 48px;
-        height: 48px;
-        position: absolute;
-        top: -15px;
-        right: -15px;
-        transform: rotate(15deg);
-      }
+  }
+}
+
+.card {
+  border: none;
+  a {
+    position: relative;
+  }
+
+  a:hover {
+    .btn-bg {
+      transform: scaleX(1);
+      opacity: 1;
     }
-    .card {
-      border: none;
-      a {
-        position: relative;
+  }
+  .btn-bg {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.4);
+    text-align: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    line-height: 30;
+    transform: scaleX(-1);
+    opacity: 0;
+    transition: 0.5s;
+  }
 
-        &:hover {
-          .btn-bg {
-            transform: scaleX(1);
-            opacity: 1;
-          }
-        }
-        .btn-bg {
-          position: absolute;
-          background-color: rgba(0, 0, 0, 0.4);
-          text-align: center;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          line-height: 30;
-          transform: scaleX(-1);
-          opacity: 0;
-          transition: 0.5s;
-        }
-      }
+  .card-body {
+    margin-top: 25px;
+    padding: 0;
 
-      .card-body {
-        margin-top: 25px;
-        padding: 0;
-
-        .title {
-          a {
-            text-decoration: none;
-          }
-        }
-
-        .shopcart {
-          a {
-            color: #242424;
-            text-decoration: none;
-          }
-        }
-      }
-
-      .line {
-        width: 80px;
-        height: 3px;
-        background-color: $primary;
-        margin-bottom: 10px;
-      }
-
-      .price {
-        font-size: 24px;
-        line-height: 1;
-        margin-bottom: 10px;
-        margin-top: 5px;
-        color: $primary;
-      }
-
-      .star {
-        color: $primary;
-        margin: 10px 0;
-        i {
-          font-size: 10px;
-        }
-      }
-
-      .cart-icon {
-        display: inline-block;
-        background-image: url('~@/assets/images/core-img/cart.png');
-        width: 21px;
-        height: 19px;
-      }
+    a {
+      text-decoration: none;
     }
+  }
+
+  .line {
+    width: 80px;
+    height: 3px;
+    background-color: $primary;
+    margin-bottom: 10px;
+  }
+
+  .price {
+    font-size: 24px;
+    line-height: 1;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    color: $primary;
+  }
+
+  .star {
+    color: $primary;
+    margin: 10px 0;
+    i {
+      font-size: 10px;
+    }
+  }
+
+  .cart-icon {
+    display: inline-block;
+    background-image: url('~@/assets/images/core-img/cart.png');
+    width: 21px;
+    height: 19px;
   }
 }
 
@@ -183,14 +176,15 @@
       color: #959595;
       text-decoration: none;
       transition: 0.5s;
+      letter-spacing: 0.5px;
+    }
 
-      &:hover {
-        color: $primary;
-      }
+    a:hover {
+      color: $primary;
+    }
 
-      &.active {
-        color: $primary;
-      }
+    a.active {
+      color: $primary;
     }
   }
 
