--- a/src/assets/scss/components/backend/_dashboard.scss
+++ b/src/assets/scss/components/backend/_dashboard.scss
@@ -101,3 +101,16 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
+
+.sign-out {
+  @media (max-width: 768px) {
+    display: none;
+  }
+  .nav-link {
+    color: #fff;
+    transition: 0.5s;
+  }
+  .nav-link:hover {
+    color: $primary;
+  }
+}
