--- a/src/assets/scss/components/frontend/_home.scss
+++ b/src/assets/scss/components/frontend/_home.scss
@@ -19,7 +19,8 @@
   @include media-breakpoint-up(xl) {
     column-count: 3;
   }
-
+}
+.home-area {
   .card {
     margin-bottom: 0;
     border: none;
@@ -30,55 +31,58 @@
       height: 100%;
       position: relative;
 
-      &::before {
-        content: "";
-        width: 100%;
-        height: 100%;
-        background-color: rgba(60, 60, 60, 0.7);
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 0;
-        transition: 0.5s;
-      }
-      &:hover {
-        .card-text,
-        .card-title {
-          color: #fff;
-        }
-        &::before {
-          opacity: 1;
-        }
-      }
-
       img {
         width: 100%;
         max-height: 100%;
       }
     }
+
+    a::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-color: rgba(60, 60, 60, 0.7);
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      transition: 0.5s;
+    }
+
+    a:hover {
+      .card-text,
+      .card-title {
+        color: #fff;
+      }
+      &::before {
+        opacity: 1;
+      }
+    }
+
     .card-body {
       position: absolute;
       top: 10px;
       left: 10px;
+    }
 
-      .card-line {
-        width: 80px;
-        height: 3px;
-        margin-bottom: 10px;
-        background-color: $primary;
-      }
+    .card-line {
+      width: 80px;
+      height: 3px;
+      margin-bottom: 10px;
+      background-color: $primary;
+    }
 
-      .card-text {
-        color: #6d6d6d;
-        line-height: 1;
-        margin-bottom: 5px;
-        transition: 0.5s;
-      }
-      .card-title {
-        color: #242424;
-        margin-bottom: 0;
-        transition: 0.5s;
-      }
+    .card-text {
+      color: #6d6d6d;
+      line-height: 1;
+      margin-bottom: 5px;
+      transition: 0.5s;
+    }
+
+    .card-title {
+      color: #242424;
+      margin-bottom: 0;
+      transition: 0.5s;
     }
   }
 }
